kubernetes-ingress-hands-on/microservices/k8s/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
