kubernetes-ingress-hands-on/microservices/k8s/storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-service
spec:
  selector:
    app: storefront
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
